--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -11,5 +11,15 @@ user.active=Активный
 user.registered=Зарегистрирован
 
 meal.title=Моя еда
+meal.date=Дата/Время
+meal.description=Описание
+meal.calories=Калорийность
+meal.fromDate=От даты
+meal.toDate=До даты
+meal.fromTime=От времени
+meal.toTime=До времени
+meal.addMeal=+Добавить
+meal.edit=Редактирование еды
+meal.create=Добавление еды
 
 common.select=Выбрать
